# ResearchCpp

./: CMakeLists.txt  competition.cpp  main.cpp
